cloud-infra-macros/tests/fails/zipfile_not_found.stderr
error: did not find file `nonexistent.zip`
 --> tests/fails/zipfile_not_found.rs:4:25
  |
4 |     let file = zipfile!("nonexistent.zip");
  |                         ^^^^^^^^^^^^^^^^^
